--- a/LLM-Build/4.Implementing a GPT Model from Scratch.ipynb
+++ b/LLM-Build/4.Implementing a GPT Model from Scratch.ipynb
@@ -496,10 +496,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "baedca18",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class FeedForward(nn.Module):\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__()\n",
+    "        self.layers = nn.Sequential(\n",
+    "            nn.Linear(cfg[\"emb_dim\"], 4*cfg[\"emb_dim\"]),\n",
+    "            GELU(),\n",
+    "            nn.Linear(4*cfg[\"emb_dim\"], cfg[\"emb_dim\"])\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.layers(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "bbf6a4ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ffn = FeedForward(GPT_CONFIG_124M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b68dcf90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(2, 3, 768)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "29a46ca0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 768])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ffn(x).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "e48b9792",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "  (1): GELU()\n",
+       "  (2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ffn.layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "5ba762b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[-0.0336, -0.0359,  0.0106,  ...,  0.0065,  0.0225, -0.0264],\n",
+       "        [-0.0162,  0.0120, -0.0122,  ...,  0.0159, -0.0118,  0.0290],\n",
+       "        [ 0.0189, -0.0072, -0.0021,  ..., -0.0010,  0.0350, -0.0325],\n",
+       "        ...,\n",
+       "        [-0.0116,  0.0216,  0.0089,  ..., -0.0232,  0.0110,  0.0343],\n",
+       "        [ 0.0266,  0.0097, -0.0114,  ..., -0.0267,  0.0289, -0.0352],\n",
+       "        [-0.0340,  0.0299, -0.0344,  ...,  0.0330, -0.0175, -0.0046]],\n",
+       "       requires_grad=True)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ffn.layers[0].weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56a6dfb4",
+   "metadata": {},
+   "source": [
+    "### Adding shortcut connections:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d03465b",
+   "metadata": {},
    "source": []
   }
  ],
