--- a/LLM-Build/5.Pre-Training on Unlabeled data.ipynb
+++ b/LLM-Build/5.Pre-Training on Unlabeled data.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a956e4d6",
+   "execution_count": 8,
+   "id": "30585671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importlib.metadata import version"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "e554d5b0",
    "metadata": {},
    "outputs": [
@@ -30,6 +30,7 @@
     }
    ],
    "source": [
+    "from importlib.metadata import version\n",
     "pkgs = [\"matplotlib\", \"numpy\", \"pandas\", \"torch\", \"tensorflow\", \"tiktoken\"]\n",
     "\n",
     "\n",
@@ -42,8 +43,523 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f06a89da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from chapter3 import GPTModel\n",
+    "GPT_CONFIG_124M = {\n",
+    "    \"vocab_size\" : 50257, # Vocabulary Size\n",
+    "    \"context_length\" : 256, # Context length\n",
+    "    \"emb_dim\":768, # Embedding dimensions\n",
+    "    \"n_heads\":12,    # Number of attention heads\n",
+    "    \"n_layers\":12, # Number of layers\n",
+    "    \"drop_rate\":0.1, # Dropout rate\n",
+    "    \"qkv_bias\":False # Query-Key_value bias\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1e93f6f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "model = GPTModel(GPT_CONFIG_124M)\n",
+    "model.eval();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4ed9830a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiktoken\n",
+    "from chapter3 import generate_text_simple\n",
+    "\n",
+    "def text_to_token_ids(text, tokenizer):\n",
+    "    encoded = tokenizer.encode(text, allowed_special = {\"<|endoftext|> \"})\n",
+    "    encoded_tensor = torch.tensor(encoded).unsqueeze(0) # Add batch dimension\n",
+    "    return encoded_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3ecae367",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[6109, 3626, 6100,  345]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_context = \"Every effort moves you\"\n",
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "\n",
+    "token_ids = text_to_token_ids(start_context, tokenizer)\n",
+    "token_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "445784a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Every effort moves you'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def token_ids_to_text(token_ids, tokenizer):\n",
+    "    flat = token_ids.squeeze(0)  # Remove batch dimension\n",
+    "    return tokenizer.decode(flat.tolist())\n",
+    "\n",
+    "\n",
+    "token_ids_to_text(token_ids, tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b9768554",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_ids = generate_text_simple(\n",
+    "    model = model, \n",
+    "    idx = text_to_token_ids(start_context, tokenizer),\n",
+    "    max_new_tokens = 10,\n",
+    "    context_size = GPT_CONFIG_124M[\"context_length\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "31310068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([14])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_ids.squeeze(0).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a0a2c509",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Every effort moves you rentingetic wasnم refres RexMeCHicular stren'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_ids_to_text(token_ids, tokenizer) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e4e4a7",
+   "metadata": {},
+   "source": [
+    "### Calculating the text generationn loss: Cross - entropy and perplexity:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "db9de5a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = torch.tensor([[16833, 3626, 6100],   # [\"every effort moves\"\n",
+    "                       [40, 1107, 588]])      # \"I really like\"]\n",
+    "\n",
+    "targets = torch.tensor([[3626, 6100, 345],    # [\"effort moves you\", \n",
+    "                        [1107, 588, 11311]])   # \"really like chcolate\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8ce5c99d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    logits = model(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "982192d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.1113, -0.1057, -0.3666,  ...,  0.2843, -0.8824,  0.1074],\n",
+       "         [-0.6109, -0.5167, -0.7613,  ...,  0.5450, -1.0319, -0.2175],\n",
+       "         [ 0.5707, -0.6459, -0.0701,  ...,  0.7419, -0.1806, -0.2217]],\n",
+       "\n",
+       "        [[-0.2968,  0.1949, -0.1649,  ..., -0.4867,  0.7218, -0.1714],\n",
+       "         [-0.8375,  0.0612, -0.4641,  ...,  0.2327, -0.3889, -0.0770],\n",
+       "         [ 0.5614,  0.6919,  0.8915,  ..., -0.9472,  1.2411, -0.2056]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d0c59e28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 50257])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d5fb0baa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 50257])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probas = torch.softmax(logits, dim=-1)\n",
+    "probas.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "025e0520",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1.8849e-05, 1.5172e-05, 1.1687e-05,  ..., 2.2409e-05,\n",
+       "          6.9776e-06, 1.8776e-05],\n",
+       "         [9.1569e-06, 1.0062e-05, 7.8786e-06,  ..., 2.9090e-05,\n",
+       "          6.0103e-06, 1.3571e-05],\n",
+       "         [2.9877e-05, 8.8507e-06, 1.5741e-05,  ..., 3.5456e-05,\n",
+       "          1.4094e-05, 1.3526e-05]],\n",
+       "\n",
+       "        [[1.2561e-05, 2.0537e-05, 1.4332e-05,  ..., 1.0389e-05,\n",
+       "          3.4784e-05, 1.4239e-05],\n",
+       "         [7.2731e-06, 1.7864e-05, 1.0565e-05,  ..., 2.1207e-05,\n",
+       "          1.1390e-05, 1.5559e-05],\n",
+       "         [2.9496e-05, 3.3605e-05, 4.1029e-05,  ..., 6.5249e-06,\n",
+       "          5.8203e-05, 1.3698e-05]]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f9d01eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toekn IDs:\n",
+      " tensor([[[16657],\n",
+      "         [  339],\n",
+      "         [42826]],\n",
+      "\n",
+      "        [[49906],\n",
+      "         [29669],\n",
+      "         [41751]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "token_ids = torch.argmax(probas, dim=-1, keepdim = True)\n",
+    "print(\"Toekn IDs:\\n\", token_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "44c65d02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target Batch 1:  effort moves you\n",
+      "Outputs batch 1:  Armed heNetflix\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Target Batch 1: {token_ids_to_text(targets[0], tokenizer)}\")\n",
+    "print(f\"Outputs batch 1: {token_ids_to_text(token_ids[0].flatten(), tokenizer)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cc4ab789",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text 1: tensor([7.4541e-05, 3.1061e-05, 1.1563e-05])\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_ids = 0\n",
+    "target_probas_1 = probas[text_ids, [0, 1, 2], targets[text_ids]]\n",
+    "print(\"Text 1:\", target_probas_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7d778dfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text 2: tensor([1.0337e-05, 5.6776e-05, 4.7559e-06])\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_ids = 1\n",
+    "target_probas_2 = probas[text_ids, [0, 1, 2], targets[text_ids]]\n",
+    "print(\"Text 2:\", target_probas_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5fc163a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ -9.5042, -10.3796, -11.3677, -11.4798,  -9.7764, -12.2561])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute logarithm of all token probabilities:\n",
+    "\n",
+    "log_probas = torch.log(torch.cat((target_probas_1, target_probas_2)))\n",
+    "print(log_probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1925cb5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(10.7940)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-1 * torch.mean(log_probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "461405a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 50257])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e7df5a60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 50257])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits_flat = logits.flatten(0, 1)\n",
+    "logits_flat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f7f33867",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_flat = targets.flatten(0, 1)\n",
+    "target_flat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9ba14ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(10.7940)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "torch.nn.functional.cross_entropy(logits_flat, target_flat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2d74a94",
+   "metadata": {},
+   "source": [
+    "### Calculating the training and validation set losses:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f9dd77d",
    "metadata": {},
    "outputs": [],
    "source": []
